--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,8 +1,9 @@
-selenium==3.141.0
-pytest==6.2.4
+selenium==4.4.3
+pytest==7.1.3
 pytest-html == 3.1.1
 pytest-xdist == 2.3.0
-openpyxl==3.0.7
-mysql-connector-python == 8.0.26
-allure-pytest==2.9.43
-allure-python-commons==2.9.43
+openpyxl==3.0.10
+mysql-connector-python == 8.0.30
+allure-pytest==2.10.0
+allure-python-commons==2.10.0
+webdriver_manager==3.8.3
